--- a/templates/chat.html
+++ b/templates/chat.html
@@ -430,8 +430,8 @@
                 <img src="{{ url_for('static', filename='Images/arrow1.png') }}" alt="Toggle Sidebar">
             </button>
             <div class="sidebar-content">
-                <div class="sidebar-title">The Goon Gang</div>
                 <div class="sidebar-text">
+                    <div class="sidebar-title">The Goon Gang</div>
                     <div class="sidebar-padding"></div>
                     <div class="sidebar-subtitle">Commands</div>
                     <div class="sidebar-padding-small"></div>
@@ -439,8 +439,8 @@
                     <div class="sidebar-command">Xiaojie Cat - Cat image</div>
                     <div class="sidebar-padding"></div>
                     <div class="sidebar-subtitle">Theme</div>
-                    <button id="scheme1-button" class="theme-button" onclick="setColorScheme(1)">Color Scheme 1</button>
-                    <button id="scheme2-button" class="theme-button" onclick="setColorScheme(2)">Color Scheme 2</button>
+                    <div><button id="scheme1-button" class="theme-button" onclick="setColorScheme(1)">Color Scheme 1</button></div>
+                    <div><button id="scheme2-button" class="theme-button" onclick="setColorScheme(2)">Color Scheme 2</button></div>
                     <div class="sidebar-padding"></div>
                     <div class="sidebar-subtitle">Online Users:</div>
                     <div class="online-users-box" id="online-users-box"></div>
