--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" id="favicon" href="{{ url_for('static', filename='Images/hbclogo.png') }}">
-    <title>HB Chat</title>
+    <link rel="icon" type="image/png" id="favicon" href="{{ url_for('static', filename='Images/skibcordlogo.png') }}">
+    <title>SkibCord</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
     <script>
@@ -67,7 +67,7 @@
                 favicon.href = "{{ url_for('static', filename='Images/Google_Doc_Logo.png') }}";
             } else {
                 fullScreenImage.style.display = 'none';
-                document.title = 'HB Chat';
+                document.title = 'SkibCord';
                 favicon.href = "{{ url_for('static', filename='Images/hbclogo.png') }}";
             }
         }
@@ -88,7 +88,7 @@
 
         // Preload favicon images
         var hbclogo = new Image();
-        hbclogo.src = "{{ url_for('static', filename='Images/hbclogo.png') }}";
+        hbclogo.src = "{{ url_for('static', filename='Images/skibcordlogo.png') }}";
         var googleDocLogo = new Image();
         googleDocLogo.src = "{{ url_for('static', filename='Images/Google_Doc_Logo.png') }}";
 
@@ -405,7 +405,7 @@
 </head>
 <body>
     <nav class="top-nav">
-        <div class="nav-title">HB Chat</div>
+        <div class="nav-title">SkibCord</div>
         <div class="username-container-nav">
             <input type="text" id="current_username_nav" class="username-display-nav" readonly>
             <img src="{{ url_for('static', filename='Images/pen.png') }}" alt="Edit" id="edit_icon_nav">
