--- a/static/css/style.css
+++ b/static/css/style.css
@@ -407,6 +407,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
 }
 
 .full-screen-image img {
